--- a/src/style.css
+++ b/src/style.css
@@ -64,8 +64,8 @@ div {
     border: 1px solid black;
     display: flex;
     padding: 1rem;
-    margin: 1rem auto;
-    max-width: 960px;
+    /*margin: 1rem auto;*/
+    /*max-width: 960px;*/
     gap: 1rem;
 }
 
