--- a/src/client/style.css
+++ b/src/client/style.css
@@ -25,7 +25,7 @@ body > div {
     flex-direction: column;
     justify-content: center;
     background: #fff;
-    box-shadow: 0 4px 24px rgba(0,0,0,0.08);
+    box-shadow: 0 4px 24px rgba(0, 0, 0, 0.08);
     margin: 0 auto;
     max-width: 600px;
     width: 100%;
@@ -63,9 +63,8 @@ label {
 input,
 select,
 textarea {
-    font-size: 1.2rem;
     padding: 1em 0.75em;
-    border: 1.5px solid #bdbdbd;
+    border: thin solid #bdbdbd;
     border-radius: 0.5em;
     background: #fafafa;
     transition: border-color 0.2s, box-shadow 0.2s;
@@ -74,7 +73,6 @@ textarea {
     box-shadow: none;
     color: #222;
     user-select: auto;
-
 }
 
 input:focus,
@@ -98,30 +96,30 @@ textarea:not(:placeholder-shown) + label {
 }
 
 button {
+    cursor: pointer;
     width: 100%;
-    padding: 1.2em 0;
+    padding: 0.8em 0;
     font-size: 1.5em;
     font-weight: 700;
     border-radius: 0.5em;
-    margin-top: 0.5em;
     background: #fbc641;
-    color: #000;
-    border: none;
-    transition: background 0.2s;
 }
 
-button:hover,
-button:focus {
-    background: #fbc641;
-    color: #000;
-    outline: none;
+button:active {
+    background: black;
+    color: #FFF;
 }
 
 @media (min-width: 600px) {
     body {
         padding: 2rem;
     }
+
     h1 {
         font-size: clamp(2.5rem, 6vw, 5rem);
     }
+}
+
+.feature-block {
+    display: none;
 }
